# python-project-83

./: Makefile  README.md  build.sh  database.sql  parser.py  pyproject.toml
.github/workflows/: my_check.yml
page_analyzer/: __init__.py  app.py  datafunc.py  db.py  url.py
page_analyzer/templates/: 404.html  base.html  index.html  url_info.html  urls.html
