[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ivan Scherbakov <lolwut155@gmail.com>"]
readme = "README.md"

packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flake8 = "^7.0.0"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
